# mox-lottery

./: README.md  pyproject.toml
contracts/: Lottery.pyi  Lottery.vy  LotteryVRF.vy
contracts/interfaces/: VRFCoordinatorV2.vyi
contracts/mocks/: link_token.vy  vrf_coordinator_v2.vy
script/: deploy.py
tests/: conftest.py  test_lottery.py
