[project]
name = "mox_lottery"
version = "0.1.0"
description = "A basic lottery smart contract, built using Vyper and Moccasin."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mamushi>=0.1.0",
    "moccasin>=0.4.3",
]

[tool.moccasin.project]
src = "contracts"
dependencies = ["snekmate"]

[tool.moccasin.networks.pyevm]
is_zksync = false

[tool.moccasin.networks.anvil]
url = "http://127.0.0.1:8545"
prompt_live = false
save_to_db = false
chain_id = 31337

[tool.moccasin.networks.sepolia]
url = "https://ethereum-sepolia-rpc.publicnode.com"
chain_id = 11155111
